@@ -10,6 +10,7 @@ Kiwix 0.9 beta1
 * Per default, Kiwix instance are not "live" anymoore. Can now be decided with buildDistribution.pl
 * Propose a download dialog if the mime-type is unknown
 * New locales: Catalan
+* Fix a bug with the "impossible" indexing process in case of defect library.xml (ID: 3068722)
 
 Kiwix 0.9 alpha6
 * Fix a regression bug impacting the case insensitive (first character only) suggestion system
